完善部分操作